syntax = "proto3";

package api.review.v1;

import "google/api/annotations.proto";
import "validate/validate.proto";

option go_package = "review-service/api/review/v1;v1";
option java_multiple_files = true;
option java_package = "api.review.v1";

//定义评价服务
service Review {
	//c端创建评价
	rpc CreateReview (CreateReviewRequest) returns (CreateReviewReply){
		option (google.api.http)={
			post: "/v1/review",
			body:"*"
		};
	};
	//c端更新评价
	rpc UpdateReview (UpdateReviewRequest) returns (UpdateReviewReply){
		option (google.api.http)={
			put: "/v1/update/{reviewID}",
			body:"*"
		};
	};
	//c端删除评价
	rpc DeleteReview (DeleteReviewRequest) returns (DeleteReviewReply){
		option (google.api.http)={
			delete: "/v1/delete/{reviewID}"
		};
	};
	//c端获取评价详情
	rpc GetReview (GetReviewRequest) returns (GetReviewReply){
		option (google.api.http)={
			get: "v1/review/{reviewID}"
		};
	};
	//c端获取自己的全部评价详情
	rpc GetAllReviews (GetAllReviewsRequest) returns (GetAllReviewsReply){
		option (google.api.http)={
			get: "v1/reviews/{userID}"
		};
	};

	//B端回复评价
	rpc ReplyReview(ReplyReviewRequest)returns(ReplyReviewReply){
		option (google.api.http)={
			post:"/v1/review/reply",
			body:"*"
		};
	}
	//B端修改回复
	rpc ReplyReviewUpdate(ReplyReviewUpdateRequest)returns(ReplyReviewUpdateReply){
		option (google.api.http)={
			put:"/v1/review/replyupdate",
			body:"*"
		};
	}
	//B端申诉评价
	rpc AppealReview(AppealReviewRequest)returns(AppealReviewReply){
		option(google.api.http)={
			post:"v1/review/appeal",
			body:"*"
		};
	}
	//O端审核评价
	rpc AuditReview(AuditReviewRequest)returns(AuditReviewReply){
		option(google.api.http)={
			post:"v1/review/audit",
			body:"*"
		};
	}
	//)端审核申诉
	rpc AuditAppeal(AuditAppealRequest)returns(AuditAppealReply){
		option(google.api.http)={
			post:"v1/appeal/audit",
			body:"*"
		};
	}
}
//c端创建评价
message CreateReviewRequest {
	int64 userID=1 [(validate.rules).int64={gt:0}];
	int64 orderID=2 [(validate.rules).int64={gt:0}];
	int64 storeID=3 [(validate.rules).int64={gt:0}];
	int32 score=4 [(validate.rules).int32={in:[1,2,3,4,5]}];
	int32 serviceScore=5 [(validate.rules).int32={in:[1,2,3,4,5]}];
	int32 expressScore=6 [(validate.rules).int32={in:[1,2,3,4,5]}];
	string content=7 [(validate.rules).string={min_len:5,max_len:140}];
	string picInfo =8;
	string videoInfo=9;
	bool anonymous=10;
}
message CreateReviewReply {
	int64 reviewID=1;
}

//c端更新评价
message UpdateReviewRequest {
	int64 reviewID=1 [(validate.rules).int64={gt:0}];
	int64 userID=2 [(validate.rules).int64={gt:0}];
	int32 score=3 [(validate.rules).int32={in:[1,2,3,4,5]}];
	int32 serviceScore=4 [(validate.rules).int32={in:[1,2,3,4,5]}];
	int32 expressScore=5 [(validate.rules).int32={in:[1,2,3,4,5]}];
	string content=6 [(validate.rules).string={min_len:5,max_len:140}];
	string picInfo =7;
	string videoInfo=8;
}
message UpdateReviewReply {
	int64 reviewID=1;
	int64 rowaffected=2 [(validate.rules).int64={gte:0}];
}

//c端删除评价
message DeleteReviewRequest {
	int64 reviewID=1 [(validate.rules).int64={gt:0}];
	int64 userID=2 [(validate.rules).int64={gt:0}];
}
message DeleteReviewReply {
	int64 rowaffected=1 [(validate.rules).int64={gte:0}];
}

//c端查询评价
message GetReviewRequest {
	int64 reviewID=1 [(validate.rules).int64={gt:0}];
}
message GetReviewReply {
	int64 userID=1 [(validate.rules).int64={gt:0}];
	int64 orderID=2 [(validate.rules).int64={gt:0}];
	int32 score=3 [(validate.rules).int32={in:[1,2,3,4,5]}];
	int32 serviceScore=4 [(validate.rules).int32={in:[1,2,3,4,5]}];
	int32 expressScore=5 [(validate.rules).int32={in:[1,2,3,4,5]}];
	string content=6 [(validate.rules).string={min_len:5,max_len:140}];
	string picInfo =7;
	string videoInfo=8;
	int32 status=9;
}

//c端查询自己的全部评价
message GetAllReviewsRequest {
	int64 userID=1 [(validate.rules).int64={gt:0}];
}
message AllReviewsInfo {
	int64 userID=1 [(validate.rules).int64={gt:0}];
	int64 orderID=2 [(validate.rules).int64={gt:0}];
	int64 reviewID=3 [(validate.rules).int64={gt:0}];
	int32 score=4 [(validate.rules).int32={in:[1,2,3,4,5]}];
	int32 serviceScore=5 [(validate.rules).int32={in:[1,2,3,4,5]}];
	int32 expressScore=6 [(validate.rules).int32={in:[1,2,3,4,5]}];
	string content=7 [(validate.rules).string={min_len:5,max_len:140}];
	string picInfo =8;
	string videoInfo=9;
	int32 status=10;
}
message GetAllReviewsReply {
	repeated AllReviewsInfo data=1;
}

//B端回复评价
message ReplyReviewRequest{
	int64 reviewID=1 [(validate.rules).int64={gt:0}];
	int64 storeID=2 [(validate.rules).int64={gt:0}];
	string content=3 [(validate.rules).string={min_len:5,max_len:200}];
	string picInfo =4;
	string videoInfo=5;
}
message ReplyReviewReply{
	int64 replyID=1;
}

//B端修改回复
message ReplyReviewUpdateRequest{
	int64 reviewID=1 [(validate.rules).int64={gt:0}];
	int64 storeID=2 [(validate.rules).int64={gt:0}];
	int64 replyID=3 [(validate.rules).int64={gt:0}];
	string content=4 [(validate.rules).string={min_len:5,max_len:200}];
	string picInfo =5;
	string videoInfo=6;
}
message ReplyReviewUpdateReply{
	int64 replyID=1;
	int64 rowsaffected=2;
}

//B端申诉评价
message AppealReviewRequest{
	int64 reviewID=1 [(validate.rules).int64={gt:0}];
	int64 storeID=2 [(validate.rules).int64={gt:0}];
	string reason=3 [(validate.rules).string={min_len:5,max_len:200}];
	string content=4 [(validate.rules).string={min_len:5,max_len:200}];
	string picInfo =5;
	string videoInfo=6;
}
message AppealReviewReply{
	int64 appealID=1;
}

//O端审核评价
message AuditReviewRequest{
	int64 reviewID=1 [(validate.rules).int64={gt:0}];
	int32 status=2 [(validate.rules).int32={in:[10,20,30,40]}];
	string opUser=3 [(validate.rules).string={min_len:2}];
	string opReason=4 [(validate.rules).string={min_len:2}];
	string opRemarks=5;
}
message AuditReviewReply{}

//O端审核申诉
message AuditAppealRequest{
	int64 appealID=1 [(validate.rules).int64={gt:0}];
	int32 status=2 [(validate.rules).int32={in:[10,20,30,40]}];
	string opUser=3 [(validate.rules).string={min_len:2}];
	string opReason=4 [(validate.rules).string={min_len:2}];
	string opRemarks=5;
}
message AuditAppealReply{}